--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   frontend:
     build: .
     environment:
-      REACT_APP_ENDPOINT: http://host.docker.internal:65080
+      REACT_APP_ENDPOINT: http://localhost:65080
     ports:
       - "61080:80"
 
